# batch-cc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: batch_cc.cpp  batch_cc.py  batch_cc_mbm.cpp  batch_cc_validate.cpp  batch_cc_validate1.cpp  scene.txt  temp.h
src/: Robots.hh  batch_cc.cu  batch_cc.hh  batch_cc_bisect.cu  batch_cc_bisect_2.cu  batch_cc_bisect_3.cu  batch_cc_bisect_4.cu  batch_cc_copy.cu  utils.cuh
src/collision/: environment.hh
src/random/: halton.hh
